--- a/subsection_Methods_Participants_We_recruited__.tex
+++ b/subsection_Methods_Participants_We_recruited__.tex
@@ -1,16 +1,16 @@
-\subsection{Methods}
+\section{Methods}
 
-Participants
+\subsection{Participants}
 
 We recruited 20 patients with OCD, 20 patients with PG, and 20 healthy controls (HCs). All participants were unrelated and matched on gender, age, and IQ. Sample demographics are presented in Table X. All participants provided informed written consent in accordance with Monash University ethics committee guidelines.
 
-Recruitment and eligibility
+\subsection{Recruitment and eligibility}
 
 OCD patients were recruited from specialist clinical services located in Melbourne, Australia. PG patients and HCs were recruited from the community. To be eligible for study inclusion, all participants were required to have no lifetime history of concussion, neurological disease, or cannabis/alcohol dependence. OCD patients were required to score >8 on the severity section of the Florida Obsessive-Compulsive Inventory (FOCI: XXX) and have their diagnosis confirmed by treatment services and the Mini International Neuropsychiatric Interview version 5 (MINI: XXX). All PG patients engaged at least weekly in Electronic Gaming Machine (EGM) gambling, were required to score >8 on the Problem Gambling Severity Index (PGSI: XXX), and had their diagnosis confirmed by the Structured Clinical Interview for DSM-IV for PG (SCID-PG: XXX). The presence of either depression or anxiety, indexed by the MINI, in either OCD or PG patients was not excluded so long as the OCD and PG symptoms constituted the primary cause of distress and interference in the patient’s life. However, all other psychiatric disorders were excluded, including the concurrent presence of OCD and PG within a single patient.
 
-Measures
+\section{Measures}
 
-Phenotyping
+\subsection{Phenotyping}
 	
 	The following questionnaires were used to proxy the impulsive-compulsive phenotype outlined above. The criteria for these measures were two fold. First, they needed to link conceptually to issues with either impulsivity or compulsivity that underlie PG and OCD. Second, they needed to be generalizable such that they did not tap into disorder-specific behaviours like chasing losses in PG or classical subtypes of OCD such as washing or checking.
 
