--- a/section_Measures_subsection_Phenotyping_The__.tex
+++ b/section_Measures_subsection_Phenotyping_The__.tex
@@ -1,10 +1,10 @@
-\section{Measures}
+\subsection{Measures}
 
-\subsection{Phenotyping}
+\subsubsection{Phenotyping}
 	
 The following questionnaires were used to proxy the impulsive-compulsive phenotype outlined above. The criteria for these measures were two fold. First, they needed to link conceptually to issues with either impulsivity or compulsivity that underlie PG and OCD. Second, they needed to be generalizable such that they did not tap into disorder-specific behaviours like chasing losses in PG or classical subtypes of OCD such as washing or checking.
 
-\subsubsection{Behavioral Inhibition and Behavioral Activation Sclaes (BIS/BAS)} 
+\subsubsubsection{Behavioral Inhibition and Behavioral Activation Sclaes (BIS/BAS)} 
 The BIS/BAS (Carver & White, 1994) is 24 item scale that measures to what extent an individual’s behaviour is controlled by inhibitory or appetitive motivations. The BAS consists of three subscales: (i) reward responsiveness (e.g. “When I get something I want, I feel excited and energized”), (ii) drive (e.g. “When I want something, I usually go all-out to get it”, and (iii) fun seeking (e.g. “I often act on the spur of the moment”).
 
 \subsubsection{Impulsive Behaviour Scale (UPPS-P)}
