added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -23,3 +23,17 @@
   title = {{The mysterious disappearance of Ettore Majorana}},
   journal = {J. Phys.: Conf. Ser.},
 }
+
+
+@article{Carver_1994,
+  doi = {10.1037/0022-3514.67.2.319},
+  url = {http://dx.doi.org/10.1037/0022-3514.67.2.319},
+  year = {1994},
+  publisher = {American Psychological Association ({APA})},
+  volume = {67},
+  number = {2},
+  pages = {319--333},
+  author = {Charles S. Carver and Teri L. White},
+  title = {{Behavioral inhibition behavioral activation, and affective responses to impending reward and punishment: The {BIS}/{BAS} Scales.}},
+  journal = {Journal of Personality and Social Psychology},
+}
