--- a/subsection_Measures_subsubsection_Phenotyping_The__.tex
+++ b/subsection_Measures_subsubsection_Phenotyping_The__.tex
@@ -4,7 +4,7 @@
 	
 The following questionnaires were used to proxy the impulsive-compulsive phenotype outlined above. The criteria for these measures were two fold. First, they needed to link conceptually to issues with either impulsivity or compulsivity that underlie PG and OCD. Second, they needed to be generalizable such that they did not tap into disorder-specific behaviours like chasing losses in PG or classical subtypes of OCD such as washing or checking.
 
-Behavioral Inhibition and Behavioral Activation Sclaes (BIS/BAS). The BIS/BAS (Carver & White, 1994) is 24 item scale that measures to what extent an individual’s behaviour is controlled by inhibitory or appetitive motivations. The BAS consists of three subscales: (i) reward responsiveness (e.g. “When I get something I want, I feel excited and energized”), (ii) drive (e.g. “When I want something, I usually go all-out to get it”, and (iii) fun seeking (e.g. “I often act on the spur of the moment”).
+Behavioral Inhibition and Behavioral Activation Sclaes (BIS/BAS). The BIS/BAS \cite{Carver_1994} is 24 item scale that measures to what extent an individual’s behaviour is controlled by inhibitory or appetitive motivations. The BAS consists of three subscales: (i) reward responsiveness (e.g. “When I get something I want, I feel excited and energized”), (ii) drive (e.g. “When I want something, I usually go all-out to get it”, and (iii) fun seeking (e.g. “I often act on the spur of the moment”).
 
 Impulsive Behaviour Scale (UPPS-P). The UPPS-P (Cyders et al., 2007) is a 59 item scale which is a revised version of the original UPPS (Whiteside, Lynam, Miller, & Reynolds, 2005).  The UPPS-P has five subscales: (i) negative urgency, (ii) positive urgency, (ii) lack of premeditation, (iv) lack of perseverance, and (v) sensation seeking. Items are scored on a 4-point scale ranging from 1 (agree strongly) to 4 (disagree strongly). Good validity and reliability has been reported (Cyders et al., 2007; Whiteside et al., 2005).
 
