added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -37,3 +37,17 @@
   title = {{Behavioral inhibition behavioral activation, and affective responses to impending reward and punishment: The {BIS}/{BAS} Scales.}},
   journal = {Journal of Personality and Social Psychology},
 }
+
+
+@article{Cyders_2007,
+  doi = {10.1037/1040-3590.19.1.107},
+  url = {http://dx.doi.org/10.1037/1040-3590.19.1.107},
+  year = {2007},
+  publisher = {American Psychological Association ({APA})},
+  volume = {19},
+  number = {1},
+  pages = {107--118},
+  author = {Melissa A. Cyders and Gregory T. Smith and Nichea S. Spillane and Sarah Fischer and Agnes M. Annus and Claire Peterson},
+  title = {{Integration of impulsivity and positive mood to predict risky behavior: Development and validation of a measure of positive urgency.}},
+  journal = {Psychological Assessment},
+}
