--- a/subsection_Measures_subsubsection_Phenotyping_The__.tex
+++ b/subsection_Measures_subsubsection_Phenotyping_The__.tex
@@ -6,7 +6,7 @@ The following questionnaires were used to proxy the impulsive-compulsive phenoty
 
 Behavioral Inhibition and Behavioral Activation Sclaes (BIS/BAS). The BIS/BAS \cite{Carver_1994} is 24 item scale that measures to what extent an individual’s behaviour is controlled by inhibitory or appetitive motivations. The BAS consists of three subscales: (i) reward responsiveness (e.g. “When I get something I want, I feel excited and energized”), (ii) drive (e.g. “When I want something, I usually go all-out to get it”, and (iii) fun seeking (e.g. “I often act on the spur of the moment”).
 
-Impulsive Behaviour Scale (UPPS-P). The UPPS-P (Cyders et al., 2007) is a 59 item scale which is a revised version of the original UPPS (Whiteside, Lynam, Miller, & Reynolds, 2005).  The UPPS-P has five subscales: (i) negative urgency, (ii) positive urgency, (ii) lack of premeditation, (iv) lack of perseverance, and (v) sensation seeking. Items are scored on a 4-point scale ranging from 1 (agree strongly) to 4 (disagree strongly). Good validity and reliability has been reported (Cyders et al., 2007; Whiteside et al., 2005).
+Impulsive Behaviour Scale (UPPS-P). The UPPS-P \cite{Cyders_2007} is a 59 item scale which is a revised version of the original UPPS (Whiteside, Lynam, Miller, & Reynolds, 2005).  The UPPS-P has five subscales: (i) negative urgency, (ii) positive urgency, (ii) lack of premeditation, (iv) lack of perseverance, and (v) sensation seeking. Items are scored on a 4-point scale ranging from 1 (agree strongly) to 4 (disagree strongly). Good validity and reliability has been reported (Cyders et al., 2007; Whiteside et al., 2005).
 
 Intolerance of Uncertainty Scale (IUS-12). The IUS-12 is a short version of the original 27 item scale that measures responses to uncertainty and ambiguity (Freeston, Rhéaume, Letarte, Dugas, & Ladouceur, 1994).  The 12 items are rated on a 5-point Likert scale ranging from 1 (not characteristic of me) to 5 (entirely characteristic of me). The 12-item version consists of two subscales. The subscales are (i) prospective IU, consisting of 7 items (e.g. “I can’t stand being taken by surprise”) and (ii) inhibitory IU, consisting of 5 items (e.g. “When it’s time to act, uncertainty paralyses me”).  Strong reliability and validity has been reported (Carleton, Norton, & Asmundson, 2007).
 
