added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -24,3 +24,17 @@
   title = {{Integration of impulsivity and positive mood to predict risky behavior: Development and validation of a measure of positive urgency.}},
   journal = {Psychological Assessment},
 }
+
+
+@article{Whiteside_2005,
+  doi = {10.1002/per.556},
+  url = {http://dx.doi.org/10.1002/per.556},
+  year = {2005},
+  publisher = {Wiley-Blackwell},
+  volume = {19},
+  number = {7},
+  pages = {559--574},
+  author = {Stephen P. Whiteside and Donald R. Lynam and Joshua D. Miller and Sarah K. Reynolds},
+  title = {{Validation of the {UPPS} impulsive behaviour scale: a four-factor model of impulsivity}},
+  journal = {Eur. J. Pers.},
+}
