added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -38,3 +38,18 @@
   title = {{Validation of the {UPPS} impulsive behaviour scale: a four-factor model of impulsivity}},
   journal = {Eur. J. Pers.},
 }
+
+
+@article{Freeston_1994,
+  doi = {10.1016/0191-8869(94)90048-5},
+  url = {http://dx.doi.org/10.1016/0191-8869(94)90048-5},
+  year = {1994},
+  month = {dec},
+  publisher = {Elsevier {BV}},
+  volume = {17},
+  number = {6},
+  pages = {791--802},
+  author = {Mark H. Freeston and Jos{\'{e}}e Rh{\'{e}}aume and H{\'{e}}l{\`{e}}ne Letarte and Michel J. Dugas and Robert Ladouceur},
+  title = {{Why do people worry?}},
+  journal = {Personality and Individual Differences},
+}
