added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -53,3 +53,18 @@
   title = {{Why do people worry?}},
   journal = {Personality and Individual Differences},
 }
+
+
+@article{Carleton_2007,
+  doi = {10.1016/j.janxdis.2006.03.014},
+  url = {http://dx.doi.org/10.1016/j.janxdis.2006.03.014},
+  year = {2007},
+  month = {jan},
+  publisher = {Elsevier {BV}},
+  volume = {21},
+  number = {1},
+  pages = {105--117},
+  author = {R. Nicholas Carleton and M.A. Peter J. Norton and Gordon J.G. Asmundson},
+  title = {{Fearing the unknown: A short version of the Intolerance of Uncertainty Scale}},
+  journal = {Journal of Anxiety Disorders},
+}
