added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -68,3 +68,18 @@
   title = {{Fearing the unknown: A short version of the Intolerance of Uncertainty Scale}},
   journal = {Journal of Anxiety Disorders},
 }
+
+
+@article{Myers_2008,
+  doi = {10.1016/j.janxdis.2007.03.012},
+  url = {http://dx.doi.org/10.1016/j.janxdis.2007.03.012},
+  year = {2008},
+  month = {apr},
+  publisher = {Elsevier {BV}},
+  volume = {22},
+  number = {3},
+  pages = {475--484},
+  author = {Samuel G. Myers and Peter L. Fisher and Adrian Wells},
+  title = {{Belief domains of the Obsessive Beliefs Questionnaire-44 ({OBQ}-44) and their specific relationship with obsessive{\textendash}compulsive symptoms}},
+  journal = {Journal of Anxiety Disorders},
+}
