--- a/subsection_Measures_subsubsection_Phenotyping_The__.tex
+++ b/subsection_Measures_subsubsection_Phenotyping_The__.tex
@@ -8,9 +8,9 @@ Behavioral Inhibition and Behavioral Activation Sclaes (BIS/BAS). The BIS/BAS \c
 
 Impulsive Behaviour Scale (UPPS-P). The UPPS-P \cite{Cyders_2007} is a 59 item scale which is a revised version of the original UPPS \cite{Whiteside_2005}.  The UPPS-P has five subscales: (i) negative urgency, (ii) positive urgency, (ii) lack of premeditation, (iv) lack of perseverance, and (v) sensation seeking. Items are scored on a 4-point scale ranging from 1 (agree strongly) to 4 (disagree strongly). Good validity and reliability has been reported \cite{Whiteside_2005,Cyders_2007}.
 
-Intolerance of Uncertainty Scale (IUS-12). The IUS-12 is a short version of the original 27 item scale that measures responses to uncertainty and ambiguity (Freeston, Rhéaume, Letarte, Dugas, & Ladouceur, 1994).  The 12 items are rated on a 5-point Likert scale ranging from 1 (not characteristic of me) to 5 (entirely characteristic of me). The 12-item version consists of two subscales. The subscales are (i) prospective IU, consisting of 7 items (e.g. “I can’t stand being taken by surprise”) and (ii) inhibitory IU, consisting of 5 items (e.g. “When it’s time to act, uncertainty paralyses me”).  Strong reliability and validity has been reported (Carleton, Norton, & Asmundson, 2007).
+Intolerance of Uncertainty Scale (IUS-12). The IUS-12 is a short version of the original 27 item scale that measures responses to uncertainty and ambiguity \cite{Freeston_1994}.  The 12 items are rated on a 5-point Likert scale ranging from 1 (not characteristic of me) to 5 (entirely characteristic of me). The 12-item version consists of two subscales. The subscales are (i) prospective IU, consisting of 7 items (e.g. “I can’t stand being taken by surprise”) and (ii) inhibitory IU, consisting of 5 items (e.g. “When it’s time to act, uncertainty paralyses me”).  Strong reliability and validity has been reported \cite{Carleton_2007}.
 
-Obsessive Beliefs Questionnaire (OBQ-44). The OBQ-44 is a short version of the original 87 item scale that consists of 44 belief statements considered characteristic of obsessive thinking (Obsessive Compulsive Cognitions Working Group, 2005). There are four subscales that represent key belief domains often distorted in compulsive individuals. The subscales are (i) responsibility (ii) threat estimation, (iii) perfectionism/certainty, and (iv) importance/control of thoughts (Myers, Fisher, & Wells, 2008). Participants indicate to what extent they believe the items are characteristic of themselves using a 7-point rating scale that ranges from (-3) “disagree very much” to (+3) “agree very much”.
+Obsessive Beliefs Questionnaire (OBQ-44). The OBQ-44 is a short version of the original 87 item scale that consists of 44 belief statements considered characteristic of obsessive thinking (Obsessive Compulsive Cognitions Working Group, 2005). There are four subscales that represent key belief domains often distorted in compulsive individuals. The subscales are (i) responsibility (ii) threat estimation, (iii) perfectionism/certainty, and (iv) importance/control of thoughts \cite{Myers_2008}. Participants indicate to what extent they believe the items are characteristic of themselves using a 7-point rating scale that ranges from (-3) “disagree very much” to (+3) “agree very much”.
 
 
 
