added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -83,3 +83,17 @@
   title = {{Belief domains of the Obsessive Beliefs Questionnaire-44 ({OBQ}-44) and their specific relationship with obsessive{\textendash}compulsive symptoms}},
   journal = {Journal of Anxiety Disorders},
 }
+
+
+@article{Frank_2015,
+  doi = {10.1016/j.cognition.2014.11.009},
+  url = {http://dx.doi.org/10.1016/j.cognition.2014.11.009},
+  year = {2015},
+  month = {feb},
+  publisher = {Elsevier {BV}},
+  volume = {135},
+  pages = {14--20},
+  author = {Michael J. Frank and David Badre},
+  title = {{How cognitive theory guides neuroscience}},
+  journal = {Cognition},
+}
