--- a/section_Introduction__.tex
+++ b/section_Introduction__.tex
@@ -1,2 +1,3 @@
 \section{Introduction}
 
+A common theme in the treatment of mental health issues is to diagnose and categorise based upon observed behaviours and infer severity by evaluating the impact behaviour has on an individuals functioning (DSM-5..). While important, behaviours are not the only window to understanding mental disorders. Understanding the mechanisms underlying abnormalities in behaviour has been a chief goal of research for decades with notable contributions from cognition and neuroscience \cite{Frank_2015}. 
