--- a/section_Introduction_A_common_theme__.tex
+++ b/section_Introduction_A_common_theme__.tex
@@ -1,3 +1,3 @@
 \section{Introduction}
 
-A common theme in the treatment of mental health issues is to diagnose and categorise based upon observed behaviours and infer severity by evaluating the impact behaviour has on an individuals functioning (DSM-5..). While important, behaviours are not the only window to understanding mental disorders. Understanding the mechanisms underlying abnormalities in behaviour has been a chief goal of research for decades with notable contributions from fields such as cognition and neuroscience \cite{Frank_2015}. 
+A common theme in mental health is to diagnose and categorise based upon observed behaviours and infer severity by evaluating the impact behaviour has on an individuals functioning. While important, behaviours are not the only window to understanding mental disorders. Understanding the mechanisms underlying abnormalities in behaviour has been a chief goal of research for decades with notable contributions from fields such as cognition and neuroscience \cite{Frank_2015}. Despite this, in the primary diagnostics manuals of mental health (DSM-5), emphasis remains on the occurrence and the nature of behaviours. 
