added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -97,3 +97,19 @@
   title = {{How cognitive theory guides neuroscience}},
   journal = {Cognition},
 }
+
+
+@article{17639253,
+  title = {{Pathological gambling and obsessive-compulsive disorder: towards a spectrum of disorders of volition.}},
+  date = {2007 Jun},
+  source = {Rev Bras Psiquiatr},
+  authors = {Tavares, H and Gentil, V},
+  author = {Tavares, H and Gentil, V},
+  year = {2007},
+  month = {Jun},
+  journal = {Rev Bras Psiquiatr},
+  volume = {29},
+  number = {},
+  pages = {107-17},
+  pubmed_id = {17639253},
+}
