added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -129,3 +129,18 @@
   pages = {107-17},
   pubmed_id = {17639253},
 }
+
+
+@article{van_Holst_2010,
+  doi = {10.1007/s11920-010-0141-7},
+  url = {http://dx.doi.org/10.1007/s11920-010-0141-7},
+  year = {2010},
+  month = {jul},
+  publisher = {Springer Science $\mathplus$ Business Media},
+  volume = {12},
+  number = {5},
+  pages = {418--425},
+  author = {Ruth J. van Holst and Wim van den Brink and Dick J. Veltman and Anna E. Goudriaan},
+  title = {{Brain Imaging Studies in Pathological Gambling}},
+  journal = {Current Psychiatry Reports},
+}
