added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -144,3 +144,18 @@
   title = {{Brain Imaging Studies in Pathological Gambling}},
   journal = {Current Psychiatry Reports},
 }
+
+
+@article{Harrison_2009,
+  doi = {10.1001/archgenpsychiatry.2009.152},
+  url = {http://dx.doi.org/10.1001/archgenpsychiatry.2009.152},
+  year = {2009},
+  month = {nov},
+  publisher = {American Medical Association ({AMA})},
+  volume = {66},
+  number = {11},
+  pages = {1189},
+  author = {Ben J. Harrison and Carles Soriano-Mas and Jesus Pujol and Hector Ortiz and Marina L{\'{o}}pez-Sol{\`{a}} and Rosa Hern{\'{a}}ndez-Ribas and Joan Deus and Pino Alonso and Murat Yücel and Christos Pantelis and Jos{\'{e}} M. Menchon and Narc{\'{\i}}s Cardoner},
+  title = {{Altered Corticostriatal Functional Connectivity in Obsessive-compulsive Disorder}},
+  journal = {Arch Gen Psychiatry},
+}
