added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -159,3 +159,18 @@
   title = {{Altered Corticostriatal Functional Connectivity in Obsessive-compulsive Disorder}},
   journal = {Arch Gen Psychiatry},
 }
+
+
+@article{Harrison_2013,
+  doi = {10.1016/j.biopsych.2012.10.006},
+  url = {http://dx.doi.org/10.1016/j.biopsych.2012.10.006},
+  year = {2013},
+  month = {feb},
+  publisher = {Elsevier {BV}},
+  volume = {73},
+  number = {4},
+  pages = {321--328},
+  author = {Ben J. Harrison and Jesus Pujol and Narcis Cardoner and Joan Deus and Pino Alonso and Marina L{\'{o}}pez-Sol{\`{a}} and Oren Contreras-Rodr{\'{\i}}guez and Eva Real and Cinto Segal{\`{a}}s and Laura Blanco-Hinojo and Jos{\'{e}} M. Menchon and Carles Soriano-Mas},
+  title = {{Brain Corticostriatal Systems and the Major Clinical Symptom Dimensions of Obsessive-Compulsive Disorder}},
+  journal = {Biological Psychiatry},
+}
