--- a/section_Introduction_A_common_theme__.tex
+++ b/section_Introduction_A_common_theme__.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-A common theme in mental health is to diagnose and categorise based upon observed behaviours and infer severity by evaluating the impact behaviour has on an individuals functioning. While important, behaviours are not the only window to understanding mental disorders. Understanding the mechanisms underlying abnormalities in behaviour has been a chief goal of research for decades, with notable contributions from fields such as cognition and neuroscience \cite{Frank_2015}. Contributions from these fields have begun revealing overlaps between disorders with dissimilar behavioural presentations. Obsessive-compulsive disorder (OCD) and problem gambling (PG) are two such examples of this, with research suggesting shared links to the inter-related constructs of impulsivity and compulsivity \cite{Tavares_2007} as well as overlapping biomarkers centered on corticostriatal circuits \cite{van_Holst_2010,Harrison_2009,Harrison_2013}. Despite this, in the primary diagnostics manuals for mental health (DSM-5), emphasis remains on the occurrence of and the nature of behaviours.
+A common theme in mental health is to diagnose and categorise based upon observed behaviours and infer severity by evaluating the impact behaviour has on an individual's functioning. While important, behaviours are not the only window to understanding mental disorders. Understanding the mechanisms underlying abnormalities in behaviour has been a chief goal of research for decades, with notable contributions from fields such as cognition and neuroscience \cite{Frank_2015}. Contributions from these fields have begun revealing overlaps between disorders with dissimilar behavioural presentations. Obsessive-compulsive disorder (OCD) and problem gambling (PG) are two such examples of this, with research suggesting shared links to the inter-related constructs of impulsivity and compulsivity \cite{Tavares_2007} as well as overlapping biomarkers centered on corticostriatal circuits \cite{van_Holst_2010,Harrison_2009,Harrison_2013}. Despite this, in the primary diagnostics manuals for mental health (DSM-5), emphasis remains on the occurrence of and the nature of behaviours.
 
 Plan:
 - Paragraph defining the idea of "phenotyping". Scrubbing out diagnostic boundaries and regrouping based on common expressions in constructs (imp comp in my case)
