--- a/section_Introduction_A_common_theme__.tex
+++ b/section_Introduction_A_common_theme__.tex
@@ -1,8 +1,14 @@
 \section{Introduction}
 
-A common theme in mental health is to diagnose and categorise based upon observed behaviours and infer severity by evaluating the impact behaviour has on an individual's functioning. While important, behaviours are not the only window to understanding mental disorders. Understanding the mechanisms underlying abnormalities in behaviour has been a chief goal of research for decades, with notable contributions from fields such as cognition and neuroscience \cite{Frank_2015}. These fields have begun revealing phenotypic overlaps between disorders with dissimilar behavioural presentations. Obsessive-compulsive disorder (OCD) and problem gambling (PG) are two such examples of this, with research suggesting shared links to the inter-related constructs of impulsivity and compulsivity \cite{Tavares_2007} as well as overlapping biomarkers centered on corticostriatal circuits \cite{van_Holst_2010,Harrison_2009,Harrison_2013}. Despite this, in the primary diagnostic manuals for mental health (DSM-5), emphasis remains on the nature and the impact of behaviours.
+A common theme in mental health is to diagnose and categorise based upon observed behaviours and infer severity by evaluating the impact behaviour has on an individual's functioning. While important, behaviours are not the only window to understanding mental disorders. Understanding the underlying mechanisms driving behaviour abnormalities has been a chief goal of research for decades, with notable contributions from fields such as cognition and neuroscience \cite{Frank_2015}. These fields have begun revealing phenotypic overlaps between disorders with dissimilar behavioural presentations. Obsessive-compulsive disorder (OCD) and problem gambling (PG) are two such examples of this, with research suggesting shared links to the inter-related constructs of impulsivity and compulsivity \cite{Tavares_2007} as well as overlapping biomarkers centered on corticostriatal circuits \cite{van_Holst_2010,Harrison_2009,Harrison_2013}. Despite this, in the primary diagnostic manuals for mental health (DSM-5), emphasis remains on the nature and the impact of behaviours. Here we show that regrouping an OCD cohort and a PG cohort based upon questionnaire measures that tap broadly into impulsivity and compulsivity reveals new insights into the underlying neural mechanisms linked to these disorders.
+
+bla bla \cite{Abe_2015}
 
 Plan:
+
+- Paragraph demonstrating the rationale of using OCD and PG: links to imp/comp
+
+- Paragraph demonstrating the rationale of using OCD and PG: links to circuitry
 
 - Paragraph defining the idea of "phenotyping". Scrubbing out diagnostic boundaries and regrouping based on common expressions in constructs (imp comp in my case)
 
