added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -174,3 +174,18 @@
   title = {{Brain Corticostriatal Systems and the Major Clinical Symptom Dimensions of Obsessive-Compulsive Disorder}},
   journal = {Biological Psychiatry},
 }
+
+
+@article{Goudriaan_2004,
+  doi = {10.1016/j.neubiorev.2004.03.001},
+  url = {http://dx.doi.org/10.1016/j.neubiorev.2004.03.001},
+  year = {2004},
+  month = {apr},
+  publisher = {Elsevier {BV}},
+  volume = {28},
+  number = {2},
+  pages = {123--141},
+  author = {Anna E Goudriaan and Jaap Oosterlaan and Edwin de Beurs and Wim Van den Brink},
+  title = {{Pathological gambling: a comprehensive review of biobehavioral findings}},
+  journal = {Neuroscience {\&} Biobehavioral Reviews},
+}
