added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -189,3 +189,17 @@
   title = {{Pathological gambling: a comprehensive review of biobehavioral findings}},
   journal = {Neuroscience {\&} Biobehavioral Reviews},
 }
+
+
+@article{Stein_1994,
+  doi = {10.1097/00005053-199404000-00009},
+  url = {http://dx.doi.org/10.1097/00005053-199404000-00009},
+  year = {1994},
+  publisher = {Ovid Technologies (Wolters Kluwer Health)},
+  volume = {182},
+  number = {4},
+  pages = {240--241},
+  author = {Dan J. Stein and Eric Hollander and Daphne Simeon and Lisa Cohen},
+  title = {{Impulsivity Scores in Patients with Obsessive-Compulsive Disorder}},
+  journal = {The Journal of Nervous and Mental Disease},
+}
