added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -203,3 +203,18 @@
   title = {{Impulsivity Scores in Patients with Obsessive-Compulsive Disorder}},
   journal = {The Journal of Nervous and Mental Disease},
 }
+
+
+@article{Fineberg_2009,
+  doi = {10.1038/npp.2009.185},
+  url = {http://dx.doi.org/10.1038/npp.2009.185},
+  year = {2009},
+  month = {nov},
+  publisher = {Nature Publishing Group},
+  volume = {35},
+  number = {3},
+  pages = {591--604},
+  author = {Naomi A Fineberg and Marc N Potenza and Samuel R Chamberlain and Heather A Berlin and Lara Menzies and Antoine Bechara and Barbara J Sahakian and Trevor W Robbins and Edward T Bullmore and Eric Hollander},
+  title = {{Probing Compulsive and Impulsive Behaviors from Animal Models to Endophenotypes: A Narrative Review}},
+  journal = {Neuropsychopharmacology},
+}
