added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -218,3 +218,17 @@
   title = {{Probing Compulsive and Impulsive Behaviors from Animal Models to Endophenotypes: A Narrative Review}},
   journal = {Neuropsychopharmacology},
 }
+
+
+@article{Fontenelle_2011,
+  doi = {10.2165/11591790-000000000-00000},
+  url = {http://dx.doi.org/10.2165/11591790-000000000-00000},
+  year = {2011},
+  publisher = {Springer Science $\mathplus$ Business Media},
+  volume = {71},
+  number = {7},
+  pages = {827--840},
+  author = {Leonardo F. Fontenelle and Sanne Oostermeijer and Ben J. Harrison and Christos Pantelis and Murat Yücel},
+  title = {{Obsessive-Compulsive Disorder Impulse Control Disorders and Drug Addiction}},
+  journal = {Drugs},
+}
