--- a/section_Introduction_A_common_theme__.tex
+++ b/section_Introduction_A_common_theme__.tex
@@ -6,6 +6,8 @@ A common theme in mental health is to diagnose and categorise based upon observe
 
 PG and OCD are associated with distinct patterns of behaviour and are typically characterised by issues with impulsivity \cite{Goudriaan_2004} and compulsivity \cite{Stein_1994}, respectively. These constructs were traditionally viewed at opposite ends of a single dimension \cite{Fineberg_2009}, however, literature is now converging on the idea that impulsivity and compulsivity are orthogonally related and can overlap \cite{Fineberg_2009,Fontenelle_2011}. For instance, \citet{Tavares_2007} supported this by demonstrating that impulsive and compulsive aspects of personality were found in both PG and OCD.
 
+Big cock.
+
 % Paragraph demonstrating the rationale of using OCD and PG: links to circuitry
 
 Converging evidence from neuroimaging investigations has identified that these disorders may also share common neural underpinnings centred on abnormal corticostriatal circuits. Moreover, these circuits have a known association with impulsivity and compulsivity \cite{Torregrossa2008}.
